# recom-core

./: .gitignore  Cargo.toml  LICENSE  README.md  agents.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  wrangler.jsonc
.claude/: launch.json  settings.local.json
.github/workflows/: ci.yml
crates/recom-scoring/: Cargo.toml  README.md
crates/recom-scoring/src/: baseline.rs  frontier.rs  lib.rs  score.rs
oracle/: README.md  compare.py
src/: chain.rs  cut.rs  graph.rs  lib.rs  partition.rs  rebalance.rs  rng.rs  score.rs  seed.rs  tree.rs  wasm.rs
tests/: determinism.rs  invariants.rs  rebalance.rs  seed_plan.rs
tests/common/: mod.rs
web/: index.html
web/src/: analytics.test.ts  analytics.ts  catalog.test.ts  catalog.ts  core.test.ts  data.ts  data.worker.ts  ensembleBaseline.test.ts  ensembleBaseline.ts  env.d.ts  graph.test.ts  graph.ts  handoff.test.ts  handoff.ts  main.ts  map.ts  mapColors.test.ts  mapColors.ts  proposalExplorer.test.ts  proposalExplorer.ts  proposalPanel.ts  recom.worker.ts  resultMode.test.ts  resultMode.ts  style.css  types.ts  unitParser.test.ts  unitParser.ts
worker/: index.test.ts  index.ts
