[package]
name = "recom-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Deterministic ReCom redistricting core for native and WebAssembly runtimes"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "oracle"
path = "src/bin/oracle.rs"
required-features = ["oracle"]

[features]
default = []
oracle = ["dep:clap", "dep:serde_json"]

[dependencies]
rand = "=0.8.5"
rand_chacha = "=0.3.1"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"

[dev-dependencies]
proptest = "1.7"
sha2 = "0.10"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

